✨ Add project links and update colors
Added project links to the page content and updated background color in the layout component for a refreshed look.

--- a/src/app/page.mdx
+++ b/src/app/page.mdx
@@ -25,7 +25,19 @@ Our mission is to be more than just a company - we're building a hive of creativ
 Join us in our journey to make the world a little bit better, one project at a time. At ForHives, we believe that together, we can create a brighter future for all.
 
 ---
+## Our Projects {{ date: '2022-01-01' }}
 
+we have a lot of projects, here are some of them:
+- [ForVoyez](https://forvoyez.com)
+- [ForMenu](https://formenu.fr)
+- [My Makeup](https://mymakeup.fr)
+- [Artriste](https://artriste.cc)
+- [Plugin Obsidian - Notes Strapi Exporter: Supercharge Your Obsidian-to-Strapi Workflow](https://github.com/CinquinAndy/notes-to-strapi-export-article-ai)
+- [ForHives Base - template](https://github.com/For-Hives/forhives-base)
+- [Script - Repository Export Script: AI-Ready Code](https://github.com/CinquinAndy/export-repository-to-prompt-for-llm)
+- [Plugin Strapi Plugin: Auto Alt Caption Title on Images with AI Enhancement](https://github.com/CinquinAndy/plugin-auto-alt-caption-title-on-images-ai-enhanced)
+
+---
 ## ForVoyez: AI-Powered Image Description {{ date: '2024-06-20T00:00Z' }}
 
 ForVoyez is our AI solution for automatic image descriptions. We created it to enhance web accessibility and SEO. It generates accurate alt text and captions, making the internet more inclusive and content more discoverable.
