✨ Update project descriptions and add detailed development journey
Refined project descriptions for better clarity and added a detailed account of the development journey, including technology decisions, tools used, and the launch reception.

--- a/src/app/page.mdx
+++ b/src/app/page.mdx
@@ -28,7 +28,7 @@ Join us in our journey to make the world a little bit better, one project at a t
 ## Our Projects {{ date: '2022-01-01' }}
 
 we have a lot of projects, here are some of them:
-- [ForVoyez](https://forvoyez.com)
+- [Site web : ForVoyez](https://forvoyez.com) // [More details](#forvoyez-ai-powered-image-description)
 - [ForMenu](https://formenu.fr)
 - [My Makeup](https://mymakeup.fr)
 - [Artriste](https://artriste.cc)
@@ -40,7 +40,47 @@ we have a lot of projects, here are some of them:
 ---
 ## ForVoyez: AI-Powered Image Description {{ date: '2024-06-20T00:00Z' }}
 
-ForVoyez is our AI solution for automatic image descriptions. We created it to enhance web accessibility and SEO. It generates accurate alt text and captions, making the internet more inclusive and content more discoverable.
+ForVoyez is our innovative AI solution for automatic image descriptions. We created it to enhance web accessibility and SEO, generating accurate alt text, titles, and captions. This makes the internet more inclusive and content more discoverable.
+
+### Project Genesis
+
+The idea for ForVoyez was born out of a common frustration: the tedious task of writing proper "ALT" text, "Title" attributes, and "Captions" for images across various CMS platforms. As a developer, I found myself repeatedly using the same code snippets for this purpose. On April 13, 2024, I thought, "What if others need this too?" Thus, ForVoyez was conceived to address this universal pain point.
+
+### Development Journey
+
+The project kicked off with in-depth discussions between myself and my colleague and friend, Bréval. We debated technology choices and refined the overall project vision.
+
+Key technology decisions included:
+- Frontend & Backend: Next.js
+- Styling: TailwindCSS with HeadlessUI and TailwindUI components
+- Authentication: Clerk
+- Database: Prisma with PostgreSQL
+- Email: Mailgun API for contact form
+- UI Enhancements: react-toastify, react-monaco-editor
+- State Management & Form Validation: Zustand and Yup
+- Testing: Vitest (unit tests) and Playwright (end-to-end tests)
+- Payment Processing: LemonSqueezy
+- Deployment: CapRover on Contabo servers
+- CI/CD: GitHub Actions
+- Containerization: Docker
+
+We also incorporated tools like Prettier, ESLint with the Perfectionist plugin, Husky for pre-commit hooks, and used Midjourney and Photoshop for complex illustrations and icons. Rive app was employed for intricate animations.
+
+Project management was handled through GitHub Issues and Projects, allowing for efficient task allocation and tracking.
+
+### Development Process
+
+We adopted a simplified agile methodology, developing features iteratively with regular code reviews and pull requests. Each new functionality was thoroughly tested before integration into the main codebase.
+
+### Launch and Reception
+
+After finalizing the MVP, we launched ForVoyez v1.0 on June 21, 2024. The reception exceeded our expectations:
+
+- Product Hunt Success: We quickly garnered over 50 upvotes within hours of launching.
+- Top 15 Product of the Day: An incredible achievement for our team.
+- Community Engagement: We received dozens of encouraging messages and commercial partnership proposals.
+
+ForVoyez represents our commitment to making the web more accessible and SEO-friendly through innovative AI applications.
 
 ---
 
