✨ Refactor import statements and add project details
Reformatted import statements for consistency. Added detailed project genesis, development journey, process, features, launch reception, and future prospects.

--- a/src/app/page.mdx
+++ b/src/app/page.mdx
@@ -1,6 +1,5 @@
-import { BeeIcon } from '@/components/BeeIcon'
-
-export { Layout as default } from '@/components/Layout'
+import {BeeIcon} from '@/components/BeeIcon'
+export {Layout as default} from '@/components/Layout'
 
 ---
 
@@ -143,6 +142,53 @@ ForMenu represents our commitment to innovating in the restaurant industry, aimi
 ## My Makeup: Beauty Service Marketplace {{ date: '2023-02-28T00:00Z' }}
 
 My Makeup connects makeup artists with clients seeking professional beauty services. It simplifies booking, showcases artist portfolios, and helps beauty professionals grow their business. Our platform makes finding the right makeup artist as easy as a few taps on your phone.
+
+### Project Genesis
+
+My Makeup was born from the realization that there was a gap in the market for connecting professional makeup artists with potential clients. The project started on February 28, 2023, with the goal of creating a platform that would benefit both makeup artists and clients.
+
+### Development Journey
+
+The project evolved through several key stages:
+- February 28, 2023: Project inception
+- August 17, 2023: Deployment of version 1.0
+
+Key technology decisions included:
+- Frontend: Next.js with NextAuth for authentication
+- Backend: Strapi
+- Database: PostgreSQL
+- Styling: TailwindCSS
+- Deployment: Similar to ForMenu setup (CapRover on Linux VPS, Docker)
+
+### Development Process
+
+The project was structured into two main components:
+1. Backend: Strapi for content management and API
+2. Frontend: Next.js for the client-facing application
+
+We utilized a variety of development and collaboration tools, emphasizing code quality and efficient workflows, similar to our approach with ForMenu.
+
+### Features and Benefits
+
+For Makeup Artists:
+- Create detailed profiles showcasing skills, experience, and portfolio
+- Access a wider client base
+- Manage bookings and availability
+- Receive client reviews and ratings
+
+For Clients:
+- Easy search for makeup artists based on location, specialization, and ratings
+- View detailed artist profiles and portfolios
+- Book appointments directly through the platform
+- Leave reviews and ratings for services received
+
+### Launch and Reception
+
+The platform was officially launched on August 17, 2023. It has been validated by Facebook and Google, adding credibility to the service. The team actively seeks feedback from both makeup artists and clients to continuously improve the platform.
+
+### Future Prospects
+
+My Makeup aims to become the go-to platform for connecting makeup artists with clients. The team is committed to adding new features, improving user experience, and expanding the platform's reach based on user feedback and market demands.
 
 ---
 
