✨ Update project links in page content
Adjusted project links for better readability and consistency. Removed redundant site names to streamline the information presentation.

--- a/src/app/page.mdx
+++ b/src/app/page.mdx
@@ -28,7 +28,7 @@ Join us in our journey to make the world a little bit better, one project at a t
 
 we have a lot of projects, here are some of them:
 ### Main Projects
-- [Site web : ForVoyez](https://forvoyez.com) // [More details](#forvoyez-ai-powered-image-description)
+- [ForVoyez](https://forvoyez.com) // [More details](#forvoyez-ai-powered-image-description)
 - [ForMenu](https://formenu.fr) // [More details](#formenu-digital-restaurant-menus)
 - [My Makeup](https://mymakeup.fr) // [More details](#my-makeup-beauty-service-marketplace)
 - [Artriste](https://artriste.cc) // [More details](#artriste-unique-art-e-commerce)
